[package]
name = "houen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.90"
arboard = "3.4.1"
colored = "2.1.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.132"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
