[package]
name = "houen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
arboard = "3.6.1"
colored = "2.2.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
